--- a/assets/01-html/09-forms/04-button_element.html
+++ b/assets/01-html/09-forms/04-button_element.html
@@ -18,7 +18,7 @@
 			HTML5에서는 <code>&lt;button&gt;</code> 요소에 다음과 같은 속성들이 추가되었습니다.<br>
 			<code>&lt;button&gt;</code> 요소에 추가된 속성과 <code>&lt;input&gt;</code> 요소에 추가된 속성은 동일하게 사용됩니다.<br>
 			autofocus, form, formaction, formenctype, formmethod, formnovalidate, formtarget<br>
-			위의 추가된 속성은 input요소에 사용되는 속성과 동일하기에 자세한 설명은 제외함.
+			위의 추가된 속성은 input요소에 사용되는 속성과 동일하기에 자세한 설명은 제외.
 		</p>
 	</section>
 
@@ -28,23 +28,23 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[type] <span class="t_blue">&lt;button type="button | submit | reset"&gt;버튼명&lt;/button&gt;</span></h3>
 			<p class="mt_s">
-				해당 버튼의 이름(name)을 명시함.<br>
-				기본적으로 button, reset, submit 의 값들이 있습니다.
+				해당 버튼의 이름(name)을 명시합니다.<br>
+				기본적으로 button, reset, submit의 값들이 있습니다.
 			</p>
 			<div class="ol_lst indent mt_s">
 				<h4 class="ml_mn">type 속성에 사용되는 값은 다음과 같습니다.</h4>
 				<ol>
 					<li class="line_code font14 mt_s">
 						<strong>button</strong>
-						<p>해당 버튼이 클릭할 수 있는 버튼(clickable button)임을 명시함.</p>
+						<p>해당 버튼이 클릭할 수 있는 버튼(clickable button)임을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>reset</strong>
-						<p>해당 버튼이 폼 데이터를 초기값으로 리셋하는 리셋 버튼(reset button)임을 명시함.</p>
+						<p>해당 버튼이 폼 데이터를 초기값으로 되돌리는 리셋 버튼(reset button)임을 명시합니다.</p>
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>submit</strong>
-						<p>해당 버튼이 폼 데이터(form data)를 제출하는 제출 버튼(submit button)임을 명시함.</p>
+						<p>해당 버튼이 폼 데이터(form data)를 제출하는 제출 버튼(submit button)임을 명시합니다.</p>
 					</li>
 				</ol>
 			</div>
@@ -53,7 +53,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name], [value], [disabled] <span class="t_blue">&lt;button name="해당 버튼의 이름(name)" value="텍스트" disabled&gt;버튼명&lt;/button&gt;</span></h3>
 			<p class="mt_s">
-				input name, value, disabled 요소의 속성과 동일
+				input name, value, disabled 요소의 속성과 동일합니다.
 			</p>
 		</article>
 	</section>
