--- a/assets/01-html/09-forms/05-select_element.html
+++ b/assets/01-html/09-forms/05-select_element.html
@@ -24,7 +24,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;select name="텍스트"&gt;</span></h3>
 			<p class="mt_s">
-				드롭다운 리스트의 이름을 명시함.
+				드롭다운 리스트의 이름을 명시합니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.5.select_element_name.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -47,7 +47,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[size] <span class="t_blue">&lt;select size="숫자"&gt;</span></h3>
 			<p class="mt_s">
-				드롭다운 리스트에서 한 번에 보일 옵션의 개수<br>
+				드롭다운 리스트에서 한 번에 보일 옵션의 개수입니다.<br>
 				기본값은 1이며, 만약 multiple 속성이 명시되어 있다면 기본값은 4로 설정됩니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.5.select_element_size.html">
@@ -99,7 +99,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[multiple] <span class="t_blue">&lt;select multiple&gt;</span></h3>
 			<p class="mt_s">
-				사용자가 한 번에 두 개 이상의 옵션을 선택할 수 있음을 명시함.
+				사용자가 한 번에 두 개 이상의 옵션을 선택할 수 있음을 명시합니다.
 			</p>
 			<p class="mt_s">
 				XHTML에서는 속성값을 생략할 수 없으므로, 속성명과 속성값을 모두 명시해야만 합니다.<br>
@@ -126,7 +126,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[autofocus] <i class="fab fa-html5"></i> <span class="t_blue">&lt;select autofocus&gt;</span></h3>
 			<p class="mt_s">
-				페이지가 로드될 때 자동으로 포커스(focus)가 드롭다운 리스트로 이동됨을 명시함.<br>
+				페이지가 로드될 때 자동으로 포커스(focus)가 드롭다운 리스트로 이동됨을 명시합니다.<br>
 				autofocus 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
@@ -155,7 +155,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;select form="form id"&gt;</span></h3>
 			<p class="mt_s">
-				해당 드롭다운 리스트가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함.<br>
+				해당 드롭다운 리스트가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.5.select_element_form.html">
@@ -179,7 +179,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[required] <i class="fab fa-html5"></i> <span class="t_blue">&lt;select required&gt;</span></h3>
 			<p class="mt_s">
-				폼 데이터(form data)가 서버로 제출되기 전 사용자가 반드시 드롭다운 리스트의 값을 선택해야 함을 명시함.<br>
+				폼 데이터(form data)가 서버로 제출되기 전 사용자가 반드시 드롭다운 리스트의 값을 선택해야 함을 명시합니다.<br>
 				required 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.
 			</p>
