--- a/assets/01-html/09-forms/06-optgroup_element.html
+++ b/assets/01-html/09-forms/06-optgroup_element.html
@@ -48,7 +48,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[label] <span class="t_blue">&lt;optgroup label="텍스트"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;optgroup&gt;</code> 요소의 label 속성은 해당 옵션 그룹의 라벨(label)을 명시합니다.
+				<code>&lt;optgroup&gt;</code> 요소의 label 속성은 해당 옵션 그룹의 레이블(label)을 명시합니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.6.optgroup_element_label.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
