--- a/assets/01-html/09-forms/07-option_element.html
+++ b/assets/01-html/09-forms/07-option_element.html
@@ -11,7 +11,7 @@
 			<code>&lt;option&gt;</code> 요소는 옵션 메뉴를 제공하는 드롭다운 리스트(drop-down list)에서 사용되는 하나의 옵션을 정의할 때 사용합니다.<br>
 			이러한 <code>&lt;option&gt;</code> 요소는 <code>&lt;select&gt;</code> 요소나 <code>&lt;datalist&gt;</code> 요소 내부에만 위치할 수 있습니다.<br>
 			<code>&lt;option&gt;</code> 요소는 아무런 속성도 명시하지 않은 채 사용할 수 있지만, 서버로 제출되는 값을 명시하는 value 속성은 명시하는 것이 일반적입니다.<br>
-			만약 옵션의 개수가 많다면, <code>&lt;optgroup&gt;</code> 요소를 사용하여 관련된 옵션들을 좀 더 보기 좋게 서로 묶어 줄 수 있습니다.
+			만약 옵션의 개수가 많다면, <code>&lt;optgroup&gt;</code> 요소를 사용하여 관련된 옵션들을 좀 더 보기 좋게 서로 묶을 수 있습니다.
 		</p>
 	</section>
 
@@ -40,7 +40,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[label] <span class="t_blue">&lt;option label="텍스트"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;option&gt;</code> 요소의 label 속성은 해당 옵션의 라벨(label)을 명시합니다.<br>
+				<code>&lt;option&gt;</code> 요소의 label 속성은 해당 옵션의 레이블(label)을 명시합니다.<br>
 				만약 label 속성이 명시되지 않는다면, 해당 값은 <code>&lt;option&gt;</code> 요소 내의 텍스트로 자동 설정됩니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.7.option_element_label.html">
