--- a/assets/01-html/09-forms/09-textarea_element.html
+++ b/assets/01-html/09-forms/09-textarea_element.html
@@ -26,7 +26,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[cols] <span class="t_blue">&lt;textarea cols="숫자"&gt;</span></h3>
 			<p class="mt_s">
-				텍스트 입력 영역 중 보이는 영역의 너비(width)를 명시함. 기본값은 20<br>
+				텍스트 입력 영역 중 보이는 영역의 너비(width)를 명시합니다(기본값은 20).<br>
 				텍스트 입력 영역의 크기는 CSS의 height 속성과 width 속성을 사용해도 설정할 수 있습니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.9.textarea_element_cols.html">
@@ -40,7 +40,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[rows] <span class="t_blue">&lt;textarea rows="숫자"&gt;</span></h3>
 			<p class="mt_s">
-				텍스트 입력 영역 중 보이는 영역의 라인수를 명시함. 기본값은 2<br>
+				텍스트 입력 영역 중 보이는 영역의 라인수를 명시합니다(기본값은 2).<br>
 				텍스트 입력 영역의 크기는 CSS의 height 속성과 width 속성을 사용해도 설정할 수 있습니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.9.textarea_element_rows.html">
@@ -54,7 +54,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[name] <span class="t_blue">&lt;textarea name="텍스트"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;textarea&gt;</code> 요소의 이름을 명시함.<br>
+				<code>&lt;textarea&gt;</code> 요소의 이름을 명시합니다.<br>
 				name 속성은 폼(form)이 제출된 후 서버에서 폼 데이터(form data)를 참조하기 위해 사용되거나, 자바스크립트에서 요소를 참조하기 위해 사용됩니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_name.html">
@@ -68,7 +68,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[disabled] <span class="t_blue">&lt;textarea disabled&gt;</span></h3>
 			<p class="mt_s">
-				해당 <code>&lt;textarea&gt;</code> 요소가 비활성화됨을 명시함.<br>
+				해당 <code>&lt;textarea&gt;</code> 요소가 비활성화됨을 명시합니다.<br>
 				disabled 속성이 명시된 텍스트 입력 영역은 사용할 수 없으며, 사용자가 클릭할 수도 없습니다.<br>
 				또한, 폼 데이터가 제출될 때도 disabled 속성이 명시된 텍스트 입력 영역의 데이터는 제출되지 않습니다.
 			</p>
@@ -91,7 +91,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[readonly] <span class="t_blue">&lt;textarea readonly&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;textarea&gt;</code> 요소의 텍스트 입력 영역이 읽기 전용임을 명시함.<br>
+				<code>&lt;textarea&gt;</code> 요소의 텍스트 입력 영역이 읽기 전용임을 명시합니다.<br>
 				읽기 전용으로 설정된 텍스트 입력 영역은 사용자가 수정할 수는 없지만, 해당 내용을 하이라이트하거나 복사할 수는 있습니다.<br>
 				따라서 이 속성을 사용하면 특정 조건이 충족될 때까지 사용자가 텍스트 입력 영역을 클릭할 수 없도록 설정하고,
 				특정 조건이 충족되면 자바스크립트 등으로 readonly 속성값을 삭제하여 사용자가 텍스트 입력 영역을 수정할 수 있도록 조절할 수 있습니다.
@@ -135,7 +135,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[autofocus] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea autofocus&gt;</span></h3>
 			<p class="mt_s">
-				페이지가 로드될 때 자동으로 포커스가 <code>&lt;textarea&gt;</code> 요소로 이동됨을 명시함.
+				페이지가 로드될 때 자동으로 포커스가 <code>&lt;textarea&gt;</code> 요소로 이동됨을 명시합니다.
 			</p>
 			<p class="mt_s">
 				autofocus 속성은 불리언(boolean) 속성입니다.<br>
@@ -187,7 +187,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea form="form id"&gt;</span></h3>
 			<p class="mt_s">
-				해당 <code>&lt;textarea&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함.<br>
+				해당 <code>&lt;textarea&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;form&gt;</code> 요소의 id 값이어야만 합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.9.textarea_element_form.html">
@@ -211,7 +211,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[maxlength] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea maxlength="숫자"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;textarea&gt;</code> 요소에서 허용되는 최대 문자수를 명시함.
+				<code>&lt;textarea&gt;</code> 요소에서 허용되는 최대 문자수를 명시합니다.
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.9.textarea_element_maxlength.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -251,7 +251,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[wrap] <i class="fab fa-html5"></i> <span class="t_blue">&lt;textarea wrap="soft | hard"&gt;</span></h3>
 			<p class="mt_s">
-				폼 데이터(form data)가 서버로 제출될 때 입력된 텍스트의 줄바꿈(wrap) 방식을 명시함.
+				폼 데이터(form data)가 서버로 제출될 때 입력된 텍스트의 줄바꿈(wrap) 방식을 명시합니다.
 			</p>
 			<div class="ol_lst indent mt_s">
 				<ol>
@@ -261,7 +261,7 @@
 					</li>
 					<li class="line_code font14 mt_s">
 						<strong>hard</strong>
-						<p>폼 데이터가 서버로 제출될 때 입력된 텍스트를 줄바꿈함. 단, hard 속성값을 사용할 경우에는 반드시 cols 속성이 명시되어 있어야 함.</p>
+						<p>폼 데이터가 서버로 제출될 때 입력된 텍스트를 줄바꿈합니다. 단, hard 속성값을 사용할 경우에는 반드시 cols 속성이 명시되어 있어야 합니다.</p>
 					</li>
 				</ol>
 			</div>
