--- a/assets/01-html/09-forms/10-output_element.html
+++ b/assets/01-html/09-forms/10-output_element.html
@@ -12,7 +12,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;output&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			Internet Explorer는 지원하지 않음
+			Internet Explorer는 지원하지 않습니다.
 		</p>
 		<div class="line_code mt_m">
 			<p class="t_blue">CSS 기본값 : output {display: inline;}</p>
@@ -43,8 +43,8 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[form] <span class="t_blue">&lt;output form="form id"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;output&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함.<br>
-				이 속성값은 반드시 같은 문서 내에 존재하는 <code>&lt;form&gt;</code> 요소의 id 속성값이어야 함.
+				<code>&lt;output&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시합니다.<br>
+				이 속성값은 반드시 같은 문서 내에 존재하는 <code>&lt;form&gt;</code> 요소의 id 속성값이어야 합니다.
 			</p>
 		</article>
 	</section>
