--- a/assets/01-html/09-forms/11-progress_element.html
+++ b/assets/01-html/09-forms/11-progress_element.html
@@ -14,7 +14,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;progress&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			<mark>Internet Explorer 10+ 부터 지원</mark>
+			<mark>Internet Explorer 10+ 부터 지원합니다.</mark>
 		</p>
 	</section>
 
@@ -27,7 +27,7 @@
 			<p class="mt_s">
 				<code>&lt;progress&gt;</code> 요소의 max 속성은 작업이 모두 완료되기까지 필요한 총 작업량을 명시합니다.<br>
 				작업이 모두 완료되기까지 필요한 총 작업량을 부동 소수점 수(floating point number)로 명시합니다.<br>
-				기본값은 1.0
+				기본값은 '1.0'입니다.
 			</p>
 		</article>
 
@@ -35,7 +35,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[value] <span class="t_blue">&lt;progress value="숫자"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;progress&gt;</code> 요소의 현재까지 완료된 작업량을 부동 소수점 수(floating point number)로 명시함.
+				<code>&lt;progress&gt;</code> 요소의 현재까지 완료된 작업량을 부동 소수점 수(floating point number)로 명시합니다.
 			</p>
 		</article>
 	</section>
