--- a/assets/01-html/09-forms/12-meter_element.html
+++ b/assets/01-html/09-forms/12-meter_element.html
@@ -14,7 +14,7 @@
 		</p>
 		<p class="mt_s">
 			<code>&lt;meter&gt;</code> 요소는 HTML5에서 새롭게 추가된 요소입니다.<br>
-			<mark>Internet Explorer는 지원하지 않음</mark>
+			<mark>Internet Explorer는 지원하지 않습니다.</mark>
 		</p>
 	</section>
 
@@ -62,7 +62,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[min] <span class="t_blue">&lt;meter min="숫자"&gt;</span></h3>
 			<p class="mt_s">
-				min 속성은 게이지(gauge)의 최솟값을 명시합니다.min 속성값은 max 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.<br>
+				min 속성은 게이지(gauge)의 최소값을 명시합니다.min 속성값은 max 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.<br>
 				이러한 min 속성은 max 속성과 함께 사용하여 전체 범위를 설정할 수 있습니다.<br>
 				min 속성값은 max 속성값보다 작거나 같아야 하며, 만약 명시되지 않는다면 기본값인 0으로 설정됩니다.
 			</p>
@@ -82,7 +82,7 @@
 			<p class="mt_s">
 				<code>&lt;meter&gt;</code> 요소가 포함될 하나 이상의 <code>&lt;form&gt;</code> 요소를 명시함.<br>
 				이 속성값은 같은 문서 내에 위치하는 <code>&lt;meter&gt;</code> 요소의 id 값이어야만 합니다.<br>
-				이 속성값은 현재 모든 브라우저에서 지원 안 함.
+				이 속성값은 현재 모든 브라우저에서 지원하지 않습니다.
 			</p>
 		</article>
 	</section>
