--- a/assets/01-html/09-forms/13-fieldset_element.html
+++ b/assets/01-html/09-forms/13-fieldset_element.html
@@ -53,7 +53,7 @@
 				disabled 속성은 불리언(boolean) 속성입니다.<br>
 				불리언 속성은 해당 속성을 명시하지 않으면 속성값이 자동으로 false 값을 가지게 되며, 명시하면 자동으로 true 값을 가지게 됩니다.<br>
 				엣지 브라우저의 경우 중첩된 <code>&lt;fieldset&gt;</code> 요소에서는 disabled 속성이 제대로 적용되지 않습니다.<br>
-				<code>&lt;fieldset disabled&gt;&lt;fieldset&gt;&lt;!-- 여전히 사용할 수 있음 --&gt;&lt;/fieldset&gt;&lt;/fieldset&gt;</code>
+				<code>&lt;fieldset disabled&gt;&lt;fieldset&gt;&lt;!-- 여전히 사용할 수 있습니다. --&gt;&lt;/fieldset&gt;&lt;/fieldset&gt;</code>
 			</p>
 			<div class="view_editor edit_code mt_s" data-target="html/09-forms/9.13.fieldset_element_disabled.html">
 				<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
@@ -66,9 +66,9 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[form] <i class="fab fa-html5"></i> <span class="t_blue">&lt;fieldset form="form id"&gt;</span></h3>
 			<p class="mt_s">
-				<code>&lt;fieldset&gt;</code> 요소에 포함될 <code>&lt;form&gt;</code> 요소의 id를 명시함.<br>
+				<code>&lt;fieldset&gt;</code> 요소에 포함될 <code>&lt;form&gt;</code> 요소의 id를 명시합니다.<br>
 				이 속성값은 반드시 같은 문서 내에 존재하는<br>
-				요소의 id 속성값이어야 함.
+				요소의 id 속성값이어야 합니다.
 			</p>
 			<div class="view_editor ex_code mt_s" data-target="html/09-forms/9.13.fieldset_element_form.html">
 				<div class="uk_editor" data-result="false" data-mode="htmlmixed" data-theme="default" data-browser="default">
