--- a/assets/01-html/09-forms/02-label_element.html
+++ b/assets/01-html/09-forms/02-label_element.html
@@ -8,7 +8,7 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			<code>&lt;label&gt;</code> 요소는 사용자 인터페이스(UI) 요소의 라벨(label)을 정의할 때 사용합니다.<br>
+			<code>&lt;label&gt;</code> 요소는 사용자 인터페이스(UI) 요소의 레이블(label)을 정의할 때 사용합니다.<br>
 			<code>&lt;label&gt;</code> 요소는 for 전역 속성을 사용하여 다른 요소와 결합할 수 있으며,
 			이때 <code>&lt;label&gt;</code> 요소의 for 속성값은 결합하고자 하는 요소의 id 속성값과 같아야 합니다.<br>
 			또한, <code>&lt;label&gt;</code> 요소를 결합하고자 하는 요소 내부에 위치시키면 for 전역 속성을 사용하지 않더라도 해당 요소와 결합시킬 수 있습니다.<br>
