--- a/assets/01-html/09-forms/03-input_element_part1.html
+++ b/assets/01-html/09-forms/03-input_element_part1.html
@@ -19,7 +19,7 @@
 			<code>&lt;input&gt;</code> 요소는 사용자가 데이터를 입력할 수 있는 입력 필드를 선언하기 위해 <code>&lt;form&gt;</code> 요소 내부에서 사용됩니다.<br>
 			이러한 입력 필드는 <code>&lt;input&gt;</code> 요소의 type 속성값을 달리함으로써 여러 가지 모양으로 나타낼 수 있습니다.<br>
 			<code>&lt;input&gt;</code> 요소는 빈 요소(empty elements)이며, 속성만을 포함하고 있습니다.<br>
-			<code>&lt;label&gt;</code> 요소를 사용하면 <code>&lt;input&gt;</code> 요소의 라벨(label)을 정의할 수도 있습니다.<br>
+			<code>&lt;label&gt;</code> 요소를 사용하면 <code>&lt;input&gt;</code> 요소의 레이블(label)을 정의할 수도 있습니다.<br>
 			<code>&lt;input&gt;</code> 요소에 type 속성을 지정하지 않으면 채택되는 기본 유형은 'text'입니다.
 		</p>
 		<p class="mt_s">
