--- a/assets/01-html/10-structure/01-html4_document.html
+++ b/assets/01-html/10-structure/01-html4_document.html
@@ -8,10 +8,10 @@
 	<section class="mt_xxl">
 		<h2 class="sound_only">요소 설명</h2>
 		<p>
-			문서의 구조, 즉 <code>&lt;body&gt;</code>와 <code>&lt;/body&gt;</code> 사이에 있는 것의 의미론적 구조는, 페이지 내용을 사용자에게 전달하는 데 중요한 토대가 됩니다.<br>
+			문서의 구조, 즉 <code>&lt;body&gt;</code>와 <code>&lt;/body&gt;</code> 사이에 있는 것의 의미론적 구조는 페이지 내용을 사용자에게 전달하는 데 중요한 토대가 됩니다.<br>
 			HTML4에선 일종의 섹션과 그 하위 섹션으로 구분하는 개념을 써서 문서의 구조를 표현합니다.<br>
-			섹션은 HTML <code>&lt;div&gt;</code>요소와 함께 그 안에 있는
-			제목을 정의하는 HTML 제목 요소(<code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code>, <code>&lt;h4&gt;</code>, <code>&lt;h5&gt;</code>, 혹은 <code>&lt;h6&gt;</code>)를 써서 정의됩니다.<br>
+			섹션은 HTML <code>&lt;div&gt;</code> 요소와 함께 그 안에 있는
+			제목을 정의하는 HTML 제목 요소(<code>&lt;h1&gt;</code> ~ <code>&lt;h6&gt;</code>)를 써서 정의됩니다.<br>
 			이런 HTML 구획 요소와 HTML 제목 요소의 관계가 문서의 구조와 그 아웃라인을 결정짓게 됩니다.<br>
 			보통 div 요소로 레이아웃 구조를 표현합니다.
 		</p>
