--- a/assets/01-html/10-structure/02-html5_document.html
+++ b/assets/01-html/10-structure/02-html5_document.html
@@ -54,7 +54,7 @@
 		<p class="mt_s">
 			비록 명시적 HTML 섹션 요소가 문서의 전체 구조를 정해주기는 하지만, 그 아웃라인을 좀 더 명확하게 표현하려면 제목의 사용도 중요합니다.<br>
 			기본 규칙은 단순합니다.<br>
-			처음 쓰인 HTML 제목 요소(<code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code>, <code>&lt;h4&gt;</code>, <code>&lt;h5&gt;</code>, <code>&lt;h6&gt;</code>code> 중 하나)가 해당 섹션의 제목으로 정해집니다.
+			처음 쓰인 HTML 제목 요소(<code>&lt;h1&gt;</code>, <code>&lt;h2&gt;</code>, <code>&lt;h3&gt;</code>, <code>&lt;h4&gt;</code>, <code>&lt;h5&gt;</code>, <code>&lt;h6&gt;</code> 중 하나)가 해당 섹션의 제목으로 정해집니다.
 		</p>
 		<p class="mt_s">
 			제목 요소엔 요소 이름에 붙은 숫자를 가지고 계급을 매기는데, <code>&lt;h1&gt;</code>이 최상위 계급이며 <code>&lt;h6&gt;</code>는 최하위 계급이 됩니다.<br>
@@ -117,7 +117,7 @@
 				</p>
 			</div>
 			<p class="mt_s">
-				만약에 이전에 사용된 제목과 같은 계급이라면, (명시적으로 정의되었을 수도 있지요!)<br>
+				만약에 이전에 사용된 제목과 같은 계급이라면,(명시적으로 정의되었을 수도 있지요!)<br>
 				바로 이전 섹션과 구분되면서 같은 계급의 또 하나의 새로운 암묵적 섹션으로 자리하게 됩니다.
 			</p>
 		</div>
@@ -134,7 +134,7 @@
 				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
 				<p class="mt_sm t_green">
 					<span>1. 둥근귀코끼리</span><br>
-					<span>2. 몽골 게르빌루스쥐 (h1 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분되어 짐)</span>
+					<span>2. 몽골 게르빌루스쥐(h1 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분됨)</span>
 				</p>
 			</div>
 			<p class="mt_s">
@@ -155,10 +155,10 @@
 				위의 구조는 다음과 같은 문서 아웃라인을 가지게 됩니다.<br>
 				<p class="mt_sm t_green">
 					<span>1. 포유 동물</span><br>
-					<span class="indent">1.1 고래 (h2 요소에 의해 자동으로 정의됨)</span><br>
-					<span class="indent">1.2 둥근귀코끼리 (섹션 요소에 의해 명시적으로 정의됨)</span><br>
-					<span class="indent">1.3 몽골 게르빌루스쥐 (h3 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분되어 짐)</span><br>
-					<span>2. 파충류 (h2 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분되어 짐)</span>
+					<span class="indent">1.1 고래(h2 요소에 의해 자동으로 정의됨)</span><br>
+					<span class="indent">1.2 둥근귀코끼리(섹션 요소에 의해 명시적으로 정의됨)</span><br>
+					<span class="indent">1.3 몽골 게르빌루스쥐(h3 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분됨)</span><br>
+					<span>2. 파충류(h2 요소에 의해 자동으로 정의됨과 동시에 이전 섹션과 구분됨)</span>
 				</p>
 			</div>
 			<p class="mt_s">
@@ -170,7 +170,7 @@
 			<p class="mt_s">
 				그런데 이것이 꼭 HTML5 명세서에서 요구하는 필수 준수 사항은 아닙니다.<br>
 				만약에 작성한 문서의 아웃라인을 브라우저가 원래 의도한 방향으로 표시해 주지 못한다면,<br>
-				혹시 사용한 제목 요소가 은연중 자동으로 기존 섹션과 구분되게 사용되었는지 확인해 보시기 바랍니다.
+				혹시 사용한 제목 요소가 은연 중 자동으로 기존 섹션과 구분되게 사용되었는지 확인해 보시기 바랍니다.
 			</p>
 			<p class="mt_s">
 				제목의 계급은 항상 해당 섹션의 중첩 수준과 일치하도록 쓰라는 규칙의 예외도 있을 수 있는데,
@@ -233,7 +233,7 @@
 					HTML Navigational 섹션 요소(<code>&lt;nav&gt;</code>)는 내비게이션 링크들을 포함하고 있는 섹션입니다.<br>
 					이런 링크들은 문서에 여러 개가 있을 수 있는데,
 					예를 들어, 콘텐츠 목차와 같은 페이지 내부 링크나 사이트의 내비게이션 링크가 있습니다.<br>
-					이런 링크는 문서의 주요 문맥과 아웃라인에 포함되지 않아서 보통 처음에는 스크린 리더나 비슷한 보조 기술을 사용하는 장치에서 읽어드리지 않을 수도 있습니다.
+					이런 링크는 문서의 주요 문맥과 아웃라인에 포함되지 않아서 보통 처음에는 스크린 리더나 비슷한 보조 기술을 사용하는 장치에서 읽어들이지 않을 수도 있습니다.
 				</li>
 				<li class="mt_sm">
 					HTML Header 섹션 요소(<code>&lt;header&gt;</code>)는 페이지의 도입부로서 보통 로고나 사이트 이름 그리고 수평 메뉴를 포함하고 있습니다.<br>
