--- a/assets/01-html/11-models/models.html
+++ b/assets/01-html/11-models/models.html
@@ -22,56 +22,56 @@
 		<div class="result_wrap">
 			<!-- Flow -->
 			<dl class="on">
-				<dt>플로우 콘텐츠 (Flow Content)</dt>
+				<dt>플로우 콘텐츠(Flow Content)</dt>
 				<dd>
-					a, abbr, address, area <span>(map 요소의 자식 요소인 경우)</span>,
+					a, abbr, address, area<span>(map 요소의 자식 요소인 경우)</span>,
 					article, aside, audio, b, bdi, bdo, blockquote, br, button, canvas, cite,
 					code, command, datalist, del, details, dfn, div, dl, em, embed, fieldset,
 					figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, i,
 					iframe, img, input, ins, kbd, keygen, label, map, mark, math, menu, meter,
 					nav, noscript, object, ol, output, p, pre, progress, q, ruby, s, samp, script,
-					section, select, small, span, strong, style <span>(scoped 속성이 있으면)</span>, sub,
+					section, select, small, span, strong, style<span>(scoped 속성이 있으면)</span>, sub,
 					sup, svg, table, textarea, time, ul, var, video, wbr, text
 				</dd>
 			</dl>
 			<!-- Metadata -->
 			<dl>
-				<dt>메타데이터 콘텐츠 (Metadata Content)</dt>
+				<dt>메타데이터 콘텐츠(Metadata Content)</dt>
 				<dd>
 					base, link, meta, noscript, script, style, template, title
 				</dd>
 			</dl>
 			<!-- Interactive -->
 			<dl>
-				<dt>인터랙티브 콘텐츠 (Interactive Content)</dt>
+				<dt>인터랙티브 콘텐츠(Interactive Content)</dt>
 				<dd>
-					a, audio (controls 속성이 있으면), button, details, embed, iframe, img (usemap 속성이 있으면), input (type 속성이 hidden 상태가 아니면), keygen, label, menu (type 속성이 toolbar 상태면), object (usemap 속성이 있으면), select, textarea, video (controls 속성이 있으면)
+					a, audio(controls 속성이 있으면), button, details, embed, iframe, img(usemap 속성이 있으면), input(type 속성이 hidden 상태가 아니면), keygen, label, menu(type 속성이 toolbar 상태면), object(usemap 속성이 있으면), select, textarea, video(controls 속성이 있으면)
 				</dd>
 			</dl>
 			<!-- Heading -->
 			<dl>
-				<dt>헤딩 콘텐츠 (Heading Content)</dt>
+				<dt>헤딩 콘텐츠(Heading Content)</dt>
 				<dd>
 					h1, h2, h3, h4, h5, h6
 				</dd>
 			</dl>
 			<!-- Sectioning -->
 			<dl>
-				<dt>섹션 콘텐츠 (Section Conetnt)</dt>
+				<dt>섹션 콘텐츠(Section Conetnt)</dt>
 				<dd>
 					article, aside, nav, section
 				</dd>
 			</dl>
 			<!-- Phrasing -->
 			<dl>
-				<dt>프레이징 콘텐츠 (Phrasing Content)</dt>
+				<dt>프레이징 콘텐츠(Phrasing Content)</dt>
 				<dd>
-					a (프레이징 콘텐츠만을 포함하는 경우), abbr, area (map 요소의 자식요소인 경우), audio, b, bdi, bdo, br, button, canvas, cite, code, command, datalist, del (프레이징 콘텐츠을 포함하는 경우), dfn, em, embed, i, iframe, img, input, ins (프레이징 콘텐츠만을 포함하는 경우), kbd, keygen, label, map (프레이징 콘텐츠만을 포함하는 경우), mark, math, meter, noscript, object, output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, textarea, time, var, video, wbr, text
+					a(프레이징 콘텐츠만을 포함하는 경우), abbr, area(map 요소의 자식요소인 경우), audio, b, bdi, bdo, br, button, canvas, cite, code, command, datalist, del(프레이징 콘텐츠을 포함하는 경우), dfn, em, embed, i, iframe, img, input, ins(프레이징 콘텐츠만을 포함하는 경우), kbd, keygen, label, map(프레이징 콘텐츠만을 포함하는 경우), mark, math, meter, noscript, object, output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, textarea, time, var, video, wbr, text
 				</dd>
 			</dl>
 			<!-- Embeddeds -->
 			<dl>
-				<dt>임베디드 콘텐츠 (Embedded Content)</dt>
+				<dt>임베디드 콘텐츠(Embedded Content)</dt>
 				<dd>
 					audio, canvas, embed, iframe, img, math, object, svg, video
 				</dd>
@@ -93,10 +93,10 @@
 
 	<blockquote class="uk_note mt_l" role="note">
 		<h2 class="sound_only">요약 설명</h2>
-		<p>HTML5의 요소는 0개 이상의 카테고리에 속하며, 각 카테고리는 서로 특성이 비슷한 요소끼리 묶어둔 분류이다.</p>
-		<p>위 이미지에서 보이는 것처럼, HTML5는 다음과 같은 카테고리들을 사용한다.</p>
-		<p>또한, 특정요소는 폼관련 요소로 따로 분류하여 다양한 폼 관련 처리 모델에서 세부적으로 분류한다.</p>
-		<p>몇몇 요소들은 특정 요소만의 독특한 요구사항을 가지고 있으며, 어느 카테고리에도 속하지 않는다.</p>
+		<p>HTML5의 요소는 0개 이상의 카테고리에 속하며, 각 카테고리는 서로 특성이 비슷한 요소끼리 묶어둔 분류입니다.</p>
+		<p>위 이미지에서 보이는 것처럼, HTML5는 다음과 같은 카테고리들을 사용합니다.</p>
+		<p>또한, 특정 요소는 폼 관련 요소로 따로 분류하여 다양한 폼 관련 처리 모델에서 세부적으로 분류합니다.</p>
+		<p>몇몇 요소들은 특정 요소만의 독특한 요구사항을 가지고 있으며, 어느 카테고리에도 속하지 않습니다.</p>
 	</blockquote>
 
 	<section class="txt_ex">
@@ -106,20 +106,20 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">플로우 콘텐츠 <span class="t_blue">(Flow Content)</span></h3>
 			<p class="mt_s">
-				문서및 어플리케이션의 Body에서 사용되는 대부분의 요소는 플로우 콘텐츠로 분류 된다.
+				문서 및 어플리케이션의 Body에서 사용되는 대부분의 요소는 플로우 콘텐츠로 분류됩니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					a, abbr, address, area (map 요소의 자식 요소인 경우), article, aside, audio, b, bdi, bdo, blockquote, br, button, canvas, cite, code, command, datalist, del, details, dfn, div, dl, em, embed, fieldset, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, i, iframe, img, input, ins, kbd, keygen, label, map, mark, math, menu, meter, nav, noscript, object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, style (scoped 속성이 있으면), sub, sup, svg, table, textarea, time, ul, var, video, wbr, text
+					a, abbr, address, area(map 요소의 자식 요소인 경우), article, aside, audio, b, bdi, bdo, blockquote, br, button, canvas, cite, code, command, datalist, del, details, dfn, div, dl, em, embed, fieldset, figure, footer, form, h1, h2, h3, h4, h5, h6, header, hgroup, hr, i, iframe, img, input, ins, kbd, keygen, label, map, mark, math, menu, meter, nav, noscript, object, ol, output, p, pre, progress, q, ruby, s, samp, script, section, select, small, span, strong, style(scoped 속성이 있으면), sub, sup, svg, table, textarea, time, ul, var, video, wbr, text
 				</p>
 			</div>
 			<div class="ol_lst indent mt_s">
 				<ol>
 					<li>
-						일반적으로 아무 플로우 콘텐츠 모델을 포함할 수 있는 콘텐츠 모델은 최소한 하나의 공백이 아닌 텍스트 노드를 포함하거나, 또는 최소한 하나의 임베디드 콘텐츠(아래 다시 설명)를 포함하여야 한다. 이러한 결과로 del요소 및 그 자식 요소들은 del요소의 부모 엘리먼트가 될 수 없다.
+						일반적으로 아무 플로우 콘텐츠 모델을 포함할 수 있는 콘텐츠 모델은 최소한 하나의 공백이 아닌 텍스트 노드를 포함하거나, 또는 최소한 하나의 임베디드 콘텐츠(아래 다시 설명)를 포함하여야 합니다. 이러한 결과로 del 요소 및 그 자식 요소들은 del 요소의 부모 엘리먼트가 될 수 없습니다.
 					</li>
 					<li class="mt_sm">
-						위의 요구사항은 강력하게 지켜야 할 내용은 아니며, 스크립트로 데이터를 채우기 위해 자리를 잡아 두는 목적 등의 정당한 이유로 요소가 비어 있을 수 있다.
+						위의 요구사항은 강력하게 지켜야 할 내용은 아니며, 스크립트로 데이터를 채우기 위해 자리를 잡아 두는 목적 등의 정당한 이유로 요소가 비어 있을 수 있습니다.
 					</li>
 				</ol>
 			</div>
@@ -130,7 +130,7 @@
 			<h3 class="ml_mn">메타데이터 콘텐츠 <span class="t_blue">(Metadata Content)</span></h3>
 			<p class="mt_s">
 				웹 문서와 관련된 정보를 표현하는 콘텐츠와 다른 문서와의 관계를 유지하는 콘텐츠입니다.<br>
-				메타 데이터 콘텐츠 는 나머지 콘텐츠의 프리젠 테이션 또는 동작을 설정,
+				메타 데이터 콘텐츠 는 나머지 콘텐츠의 프리젠테이션 또는 동작을 설정,
 				다른 문서와 문서의 관계를 설정하거나 다른 "대역 외"정보를 전달하는 콘텐츠입니다.
 			</p>
 			<div class="line_code mt_s">
@@ -143,8 +143,8 @@
 			<h3 class="ml_mn">섹션 콘텐츠 <span class="t_blue">(Section Conetnt)</span></h3>
 			<p class="mt_s">
 				웹 문서의 섹션 영역을 정의하는 요소입니다.<br>
-				섹션 콘텐츠는 헤딩과 푸터의 유효범위를 지정함.<br>
-				제목과 그 내용을 포함하는 범위를 지정함.
+				섹션 콘텐츠는 헤딩과 푸터의 유효범위를 지정합니다.<br>
+				제목과 그 내용을 포함하는 범위를 지정합니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>article, aside, nav, section</p>
@@ -155,7 +155,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">헤딩 콘텐츠 <span class="t_blue">(Heading Conetnt)</span></h3>
 			<p class="mt_s">
-				헤딩 콘텐츠는 섹션(섹션 콘텐츠나 또는 헤딩 콘텐츠에 의해 암시적으로 마크업 된 영역)의 헤더를 정의한다.
+				헤딩 콘텐츠는 섹션(섹션 콘텐츠나 또는 헤딩 콘텐츠에 의해 암시적으로 마크업 된 영역)의 헤더를 정의합니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>h1, h2, h3, h4, h5, h6</p>
@@ -167,13 +167,13 @@
 			<h3 class="ml_mn">프레이징 콘텐츠 <span class="t_blue">(Phrasing Conetnt)</span></h3>
 			<p class="mt_s">
 				프레이징 콘텐츠는 문장과 텍스트가 관련된 요소입니다.<br>
-				프레이징 콘텐츠는 문서의 텍스트이며, 그 텍스트를 단락 내부레벨에서 마크업을 하는 요소임.<br>
-				프레이징 콘텐츠가 모여 문단을 구성한다.<br>
-				일반적으로 프레이징 콘텐츠 모델 요소를 포함할 수 있는 요소들은 최소 하나의 공백이 아닌 텍스트를 포함하거나 또는 최소 하나의 임베디드 콘텐츠를 포함하여야 한다.
+				프레이징 콘텐츠는 문서의 텍스트이며, 그 텍스트를 단락 내부레벨에서 마크업을 하는 요소입니다.<br>
+				프레이징 콘텐츠가 모여 문단을 구성합니다.<br>
+				일반적으로 프레이징 콘텐츠 모델 요소를 포함할 수 있는 요소들은 최소 하나의 공백이 아닌 텍스트를 포함하거나 또는 최소 하나의 임베디드 콘텐츠를 포함하여야 합니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					a (프레이징 콘텐츠만을 포함하는 경우), abbr, area (map 요소의 자식요소인 경우), audio, b, bdi, bdo, br, button, canvas, cite, code, command, datalist, del (프레이징 콘텐츠을 포함하는 경우), dfn, em, embed, i, iframe, img, input, ins (프레이징 콘텐츠만을 포함하는 경우), kbd, keygen, label, map (프레이징 콘텐츠만을 포함하는 경우), mark, math, meter, noscript, object, output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, textarea, time, var, video, wbr, text
+					a(프레이징 콘텐츠만을 포함하는 경우), abbr, area(map 요소의 자식요소인 경우), audio, b, bdi, bdo, br, button, canvas, cite, code, command, datalist, del(프레이징 콘텐츠을 포함하는 경우), dfn, em, embed, i, iframe, img, input, ins(프레이징 콘텐츠만을 포함하는 경우), kbd, keygen, label, map(프레이징 콘텐츠만을 포함하는 경우), mark, math, meter, noscript, object, output, progress, q, ruby, s, samp, script, select, small, span, strong, sub, sup, svg, textarea, time, var, video, wbr, text
 				</p>
 			</div>
 		</article>
@@ -183,9 +183,9 @@
 			<h3 class="ml_mn">임베디드 콘텐츠 <span class="t_blue">(Embedded Conetnt)</span></h3>
 			<p class="mt_s">
 				다른 소스를 가져오거나 삽입시키는 컨텐츠와 관련된 요소입니다.<br>
-				임베디드 콘텐츠는 다른 리소스(음악, 영상 등)를 문서에 삽입하는 콘텐츠나, 문서에 삽입된 다른 형태에서 유래한 콘텐츠를 말한다.<br>
-				HTML의 네임스페이스에 속하지 않으면서, 콘텐츠를 포함하고 있지만 메타데이터가 아닌 것들을 임베디드 콘텐츠라 한다. (SVG등)<br>
-				임베디드 콘텐츠 요소 중 일부는 외부 리소스가 사용이 불가능 할때 사용할 대체 콘텐츠를 갖는다.
+				임베디드 콘텐츠는 다른 리소스(음악, 영상 등)를 문서에 삽입하는 콘텐츠나, 문서에 삽입된 다른 형태에서 유래한 콘텐츠를 말합니다.<br>
+				HTML의 네임스페이스에 속하지 않으면서, 콘텐츠를 포함하고 있지만 메타데이터가 아닌 것들을 임베디드 콘텐츠라 합니다.(SVG등)<br>
+				임베디드 콘텐츠 요소 중 일부는 외부 리소스가 사용이 불가능 할때 사용할 대체 콘텐츠를 갖습니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>
@@ -198,11 +198,11 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">인터랙티브 콘텐츠 <span class="t_blue">(Interactive Conetnt)</span></h3>
 			<p class="mt_s">
-				인터랙티브 콘텐츠는 사용자와의 상호작용을 위해 사용되는 콘텐츠이다.
+				인터랙티브 콘텐츠는 사용자와의 상호작용을 위해 사용되는 콘텐츠입니다.
 			</p>
 			<div class="line_code mt_s">
 				<p>
-					a, audio (controls 속성이 있으면), button, details, embed, iframe, img (usemap 속성이 있으면), input (type 속성이 hidden 상태가 아니면), keygen, label, menu (type 속성이 toolbar 상태면), object (usemap 속성이 있으면), select, textarea, video (controls 속성이 있으면)
+					a, audio(controls 속성이 있으면), button, details, embed, iframe, img(usemap 속성이 있으면), input(type 속성이 hidden 상태가 아니면), keygen, label, menu(type 속성이 toolbar 상태면), object(usemap 속성이 있으면), select, textarea, video(controls 속성이 있으면)
 				</p>
 			</div>
 		</article>
@@ -240,7 +240,7 @@
 		<article class="indent_max txt_ex mt_l">
 			<h3 class="ml_mn">[open] <span class="t_blue">&lt;details open&gt;</span></h3>
 			<p class="mt_s">
-				요소가 사용자에게 보이도록 펼쳐짐을 명시함.<br>
+				요소가 사용자에게 보이도록 펼쳐짐을 명시합니다.<br>
 				상세 정보, 즉 <code>&lt;details&gt;</code> 요소의 콘텐츠가 현재 보이는 상태인지 나타냅니다.<br>
 				기본값 false는 정보가 보이지 않는다는 뜻입니다.
 			</p>
