--- a/assets/01-html/12-bookmark/bookmark.html
+++ b/assets/01-html/12-bookmark/bookmark.html
@@ -9,11 +9,11 @@
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
 			W3C의 규격이 W3C 권고안에 이르기까지의 과정은<br>
-			"초안 (Working Draft)"<br>
-			→ "최종 초안 (Last Call Working Draft)"<br>
-			→ "권고 후보 (CR : Candidate Recommendation)"<br>
-			→ "권고안 (PR : Proposed Recommendation)"<br>
-			→ "W3C 권고안 (Rec : Recommendation)"<br>
+			&quot;초안 (Working Draft)&quot;<br>
+			&rarr; &quot;최종 초안 (Last Call Working Draft)&quot;<br>
+			&rarr; &quot;권고 후보 (CR : Candidate Recommendation)&quot;<br>
+			&rarr; &quot;권고안 (PR : Proposed Recommendation)&quot;<br>
+			&rarr; &quot;W3C 권고안 (Rec : Recommendation)&quot;<br>
 			이라는 5개의 단계가 있습니다.
 		</p>
 	</blockquote>
