- css > 고급 > grid > 자식 속성 작업 완료

--- a/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part3.html
@@ -716,7 +716,7 @@
 				-->
 
 				<section class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.5.grid-auto-flow.html">
-					<h5 class="ve_tit">예제</h5>
+					<h4 class="ve_tit font-16">예제</h4>
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
@@ -882,7 +882,7 @@
 				</div>
 
 				<section class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.grid.html">
-					<h5 class="ve_tit">예제</h5>
+					<strong class="ve_tit font-16">예제</strong>
 					<div class="uk_editor" data-result="true" data-mode="htmlmixed" data-theme="moxer" data-browser="default">
 						<div class="code_wrap"><textarea></textarea></div>
 					</div>
