--- a/assets/02-css/01-cssStart/04-css_modules.html
+++ b/assets/02-css/01-cssStart/04-css_modules.html
@@ -9,29 +9,29 @@
 		<h2 class="sound_only">요약 설명</h2>
 		<p>
 			모듈과 표준화 과정(Modules and the standardization process)은<br>
-			2002년 8월부터 2011년 6월까지 CSS Level2가 권장(Recommendation)단계에 이르기 까지 총 9년이 걸렸습니다.<br>
+			2002년 8월부터 2011년 6월까지 CSS Level2가 권장(Recommendation)단계에 이르기까지 총 9년이 걸렸습니다.<br>
 			이는 몇몇 부차적인 기능들이 전체 명세(specification)의 진행을 더디게 만들었기 때문입니다.<br>
 			W3C의 CSS Working Group은 문제를 일으키는 몇몇 기능을 제외한 나머지 기능들의 표준화 작업을 보다 빠르게 진행하기 위하여
-			Beijing doctrine에 따라 CSS를 보다 작은 컴포넌트 단위로 나눴고, 이를 모듈(module)이라 부릅니다.<br>
+			Beijing doctrine에 따라 CSS를 보다 작은 컴포넌트 단위로 나누었고, 이를 모듈(module)이라 부릅니다.<br>
 			현재 각각의 모듈은 서로 독립적으로 표준화 과정을 거치고 있습니다.<br>
-			이미 몇몇 모듈은 W3C Rocommendations 에 이르렀으나, 나머지는 여진히 Working Drafts 단계에 머물러 있습니다.<br>
-			또한 새로운 요구사항(needs)이 발생할 때 마다 계속해서 새로운 모듈이 추가되고 있습니다.
+			이미 몇몇 모듈은 W3C Rocommendations에 이르렀으나, 나머지는 여진히 Working Drafts 단계에 머물러 있습니다.<br>
+			또한 새로운 요구사항(needs)이 발생할 때마다 계속해서 새로운 모듈이 추가되고 있습니다.
 		</p>
 		<p class="mt_s">
-			공식적으로 CSS3 자체 표준은 존재하지 않습니다.<br>
-			각각의 모듈이 독립적으로 표준화 되고 있고, 표준 CSS는 모듈을 통해 CSS2.1을 수정하여 상속(extends)하는 것으로 구성되어있서 항상 같은 level number를 갖는 것은 아닙니다.<br>
-			특정 시점의 CSS2.1과 완성된 모듈들로 구성된 CSS표준 스냅샷을 정의할 수 있습니다. W3C는 주기적으로 이런 스냅샷을 발표하고 있습니다. (2007 / 2010)
+			공식적으로 CSS 3 자체 표준은 존재하지 않습니다.<br>
+			각각의 모듈이 독립적으로 표준화 되고 있고, 표준 CSS는 모듈을 통해 CSS 2.1을 수정하여 상속(extends)하는 것으로 구성되어 있어 항상 같은 level number를 갖는 것은 아닙니다.<br>
+			특정 시점의 CSS 2.1과 완성된 모듈들로 구성된 CSS 표준 스냅샷을 정의할 수 있습니다. W3C는 주기적으로 이런 스냅샷을 발표하고 있습니다.(2007 / 2010)
 		</p>
 		<p class="mt_s">
-			아직까지 lever 3보다 높은 level을 가진 모듈은 없지만 곧 생길 것입니다.<br>
-			Selector 4나 CSSborder 4, Background 4와 같은 몇몇 모듈은 Working Draft가 공개된적은 없지만 이미 Editor's Draft는 작성되어 있습니다.
+			아직까지 level 3보다 높은 level을 가진 모듈은 없지만 곧 생길 것입니다.<br>
+			Selector 4나 CSS border 4, Background 4와 같은 몇몇 모듈은 Working Draft가 공개된 적은 없지만 이미 Editor's Draft는 작성되어 있습니다.
 		</p>
 		<p class="mt_s">
-			몇개의 모듈은 이미 상당히 안정적이고, CSSWG의 recommendation 3단계(Candidate Recommendation, Propesed Recommendation, Recommendation) 중 하나에 도달했습니다.<br>
-			이 모듈들은 별도의 과정없이도 꽤 안정적으로 사용할 수 있습다. 하지만 몇몇 기능은 여전히 Candidate Recommendation 단계에 머물러 있습니다.
+			몇 개의 모듈은 이미 상당히 안정적이고, CSSWG의 recommendation 3단계(Candidate Recommendation, Propesed Recommendation, Recommendation) 중 하나에 도달했습니다.<br>
+			이 모듈들은 별도의 과정 없이도 꽤 안정적으로 사용할 수 있습다. 하지만 몇몇 기능은 여전히 Candidate Recommendation 단계에 머물러 있습니다.
 		</p>
 		<p class="mt_s">
-			모듈들은 명세(spec)의 핵심이 되는 CSS2.1을 수정, 상속하고 있습니다.
+			모듈들은 명세(spec)의 핵심이 되는 CSS 2.1을 수정, 상속하고 있습니다.
 		</p>
 	</blockquote>
 
