--- a/assets/02-css/01-cssStart/07-css_cascading.html
+++ b/assets/02-css/01-cssStart/07-css_cascading.html
@@ -15,41 +15,41 @@
 			하지만 모든 CSS 속성이 상속되는 것은 아닙니다. margin 같은 경우는 하위 요소가 상위 요소의 속성 값들을 물려받는 경우가 거의 없으므로 상속되지 않습니다.<br>
 			대부분의 경우, 상식적으로 생각하면 어떤 속성들이 상속되고 어떤 것들이 그렇지 않을지 쉽게 짐작할 수 있습니다.<br>
 			구체적인 상속 여부를 확인하려면 CSS 2.1 명세의 속성 요약 테이블을 참고하세요.<br>
-			상속되지 않는 속성들은, inherit 속성 값을 사용하여 명시적으로 상속받게 할 수 있습니다.
+			상속되지 않는 속성들은, inherit 속성값을 사용하여 명시적으로 상속받게 할 수 있습니다.
 		</p>
 
 		<div class="ol_lst indent mt_s">
 			<ol>
 				<li class="line_code font14">
 					<strong>inherit(상속) 키워드</strong>
-					<p>모든 요소의 속성이 상속 된 값 으로 변경되도록 지정 합니다.</p>
+					<p>모든 요소의 속성이 상속된 값으로 변경되도록 지정합니다.</p>
 					<p>inherit 키워드는 속성이 부모 요소에서 값을 상속하도록 지정합니다.</p>
 					<p>inherit 키워드는 모든 CSS 속성 및 모든 HTML 요소에 사용할 수 있습니다.</p>
-					<p>inherit 키워드는 IE7 및 이전 버전에서 지원되지 않습니다. IE8에는! DOCTYPE이 필요합니다.</p>
-					<p>IE8+ 부터 지원.</p>
+					<p>inherit 키워드는 Internet Explorer(이하 IE) 7 및 이전 버전에서 지원되지 않습니다. IE 8에는 !DOCTYPE이 필요합니다.</p>
+					<p>IE 8+부터 지원합니다.</p>
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>initial(초기) 키워드</strong>
-					<p>속성을 초기 값으로 설정하는 데 사용 합니다.</p>
-					<p>모든 요소의 속성을 초기 값 으로 변경하도록 지정 합니다.</p>
-					<p>initial 키워드는 CSS 속성을 기본값으로 설정하는 데 사용됩니다.</p>
+					<p>모든 요소의 속성을 초기값으로 변경하도록 지정합니다.</p>
+					<p>initial 키워드는 CSS 속성을 기본값으로 설정하는데 사용됩니다.</p>
 					<p>initial 키워드는 모든 CSS 속성 및 모든 HTML 요소에 사용할 수 있습니다.</p>
-					<p>Internet Explorer 11 및 이전 버전에서는 initial 키워드가 지원되지 않습니다.</p>
+					<p>IE 11 및 이전 버전에서는 initial 키워드가 지원되지 않습니다.</p>
 					<p>
-						initial 키워드는 IE 에서는 Not Supported 입니다. 따라서 css 에서 default 값을 이용하려는 경우<br>
-						width 속성의 경우 initial 대신 auto 를 사용하고, background-color 속성의 경우 initial 대신 transparent 를 사용.<br>
-						min-width 속성의 경우 initial 대신 inherit 를 사용해야 합니다. (IE에서도 적용되기 위해)
+						initial 키워드는 IE에서는 Not Supported입니다.<br>
+						따라서 CSS에서 default 값을 IE에서도 포함하여 이용하는 방법에는<br>
+						width 속성의 경우 initial 대신 auto를 사용하고, background-color 속성의 경우 initial 대신 transparent를 사용합니다.<br>
+						min-width 속성의 경우 initial 대신 inherit를 사용해야 합니다.
 					</p>
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>unset 키워드</strong>
-					<p>요소 또는 요소의 부모에 적용된 모든 속성을 상속 가능한 경우 부모 값으로 변경하거나 그렇지 않은 경우 초기 값으로 변경합니다.</p>
-					<p>다시 말해 모든 요소의 속성이 기본적으로 상속되는 경우 상속 된 값으로 변경되거나 그렇지 않은 경우 초기 값으로 변경되도록 지정합니다.</p>
+					<p>요소 또는 요소의 부모에 적용된 모든 속성을 상속 가능한 경우 부모 속성이 가진 값으로 변경하거나 그렇지 않은 경우 초기값으로 변경합니다.</p>
+					<p>다시 말해 모든 요소의 속성이 기본적으로 상속되는 경우 상속된 값으로 변경되거나 그렇지 않은 경우 초기값으로 변경되도록 지정합니다.</p>
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>revert 키워드</strong>
 					<p>선언이 속하는 스타일 시트 원점에 따라 동작을 지정합니다.</p>
-					<p>현재 safari 9.1+ 에서만 동작합니다.</p>
+					<p>현재 safari 9.1+에서만 동작합니다.</p>
 				</li>
 				<li class="line_code font14 mt_s">
 					<strong>all 속성</strong>
@@ -73,13 +73,13 @@
 	<section class="txt_ex mt_l">
 		<h2>캐스케이딩(Cascading)</h2>
 		<p class="indent">
-			'캐스케이딩'은 하나의 요소에 여러 속성들을 선언할 때 생기는 충돌을 충돌을 피하는 규칙을 말한다.
+			'캐스케이딩'은 하나의 요소에 여러 속성들을 선언할 때 생기는 충돌을 피하는 규칙을 말합니다.
 		</p>
 		<div class="ol_lst indent mt_s">
 			<p>캐스캐이딩에는 다음과 같이 세가지 규칙이 있습니다.</p>
 			<ol class="indent mt_sm">
-				<li>중요도 : CSS가 어디에 선언 되었는지에 따라서 우선순위가 달라진다.</li>
-				<li>명시도 : 대상을 명확하게 특정할수록 명시도가 높아지고 우선순위가 높아진다.</li>
+				<li>중요도 : CSS가 어디에 선언되었는지에 따라서 우선순위가 달라진다.</li>
+				<li>명시도 : 대상을 명확하게 특정할 수록 명시도가 높아지고 우선순위가 높아진다.</li>
 				<li>코드의 순서 : 선언된 순서에 따라 우선 순위가 적용된다. 즉, 나중에 선언된 스타일이 우선 적용된다.</li>
 			</ol>
 		</div>
@@ -89,7 +89,7 @@
 	<section class="txt_ex mt_l">
 		<h2>중요도</h2>
 		<p class="indent">
-			CSS 선언의 중요도는, 그것이 '어디' 에서 사용되었는가에 따라 다릅니다. 다음의 순서 대로, 나중 선언이 앞선 선언을 덮어쓰고 요소에 적용됩니다.<br>
+			CSS 선언의 중요도는, 그것이 '어디'에서 사용되었는지에 따라 다릅니다. 다음의 순서대로, 나중 선언이 앞선 선언을 덮어 쓰고 요소에 적용됩니다.<br>
 			CSS 속성을 줄 때 !important를 뒤에 붙이면 우선순위가 가장 높아집니다.
 		</p>
 		<div class="ol_lst indent mt_s">
@@ -124,6 +124,6 @@
 	<section class="txt_ex mt_l">
 		<h2>코드의 순서</h2>
 		<p class="indent">
-			하나의 요소를 가리키는 선언이 두개 있고, 두 선언의 중요도와 명시도가 모두 같다면, 나중에 나온 선언을 선택하게 됩니다.
+			하나의 요소를 가리키는 선언이 두 개 있고, 두 선언의 중요도와 명시도가 모두 같다면, 나중에 나온 선언을 선택하게 됩니다.
 		</p>
 	</section>
