- css > 고급 > 참조 사이트 완료

--- a/assets/02-css/04-cssAdvanced/05-css_grid_part1.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part1.html
@@ -108,9 +108,9 @@
 
 			<figure class="img_figure mt_m">
 				<figcaption class="mt_0 t _black weight-600">[grid vs flex]</figcaption>
-				<img src="http://192.168.4.75:89/ukncs/images/css/grid_vs_flex.png" alt="grid vs flex" class="mt_m max-w700"><br>
-				<img src="http://192.168.4.75:89/ukncs/images/css/grid_vs_flex2.jpg" alt="grid vs flex" class="mt_m max-w800"><br>
-				<img src="http://192.168.4.75:89/ukncs/images/css/grid_vs_flex.gif" alt="grid vs flex" class="mt_m max-w750">
+				<img src="/ukncs/images/css/grid_vs_flex.png" alt="grid vs flex" class="mt_m max-w700"><br>
+				<img src="/ukncs/images/css/grid_vs_flex2.jpg" alt="grid vs flex" class="mt_m max-w800"><br>
+				<img src="/ukncs/images/css/grid_vs_flex.gif" alt="grid vs flex" class="mt_m max-w750">
 			</figure>
 		</article>
 	</section>
