--- a/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
+++ b/assets/02-css/04-cssAdvanced/05-css_grid_part4.html
@@ -374,7 +374,7 @@
 					</ul>
 				</div>
 				<figure class="img_figure indent mt_m">
-					<img src="http://192.168.4.75:89/ukncs/images/css/grid-z-index.png" alt="그리드 아이템의 쌓이는 순서를 지정" class="max-w350">
+					<img src="/ukncs/images/css/grid-z-index.png" alt="그리드 아이템의 쌓이는 순서를 지정" class="max-w350">
 				</figure>
 
 				<div class="view_editor edit_code mt_ml" data-target="css/step03/4.5.grid/4.5.6.4.grid-z-index.html">
