- 메인 추 링크 수정

--- a/main.html
+++ b/main.html
@@ -107,7 +107,7 @@
 				</div>
 			</li>
 			<li class="kyo_sung">
-				<a href="//921430km.com" target="_blank" class="box">
+				<a href="http://921430km.com" target="_blank" class="box">
 					<strong>KYO-SUNG, CHU</strong>
 					<div>
 						<b>추교성</b>
